--- a/src/estilos.css
+++ b/src/estilos.css
@@ -52,3 +52,61 @@ header nav .menu .links a {
     color: #b1575a;
     font-size: 18px;
 }
+
+.contenedor{
+    display: flex;
+    flex-flow: row wrap;
+    justify-items: center;
+    justify-content: space-around;
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
+.card{
+    border: 3px dashed #de9b20;
+    margin-bottom: 15px;
+}
+
+.botonGral {
+    background-color: #b1575a;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    color: white;
+    font-size: 14px;
+    padding: 10px 25px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+p{
+    color: #b1575a;
+    font-size: 18px;
+    white-space: pre-line;
+    margin: 10px 20px;
+}
+
+.titulos{
+    color: #b1575a;
+    margin-top: 15px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.footer {
+    height: 100%;
+    background-color: #271918;
+    text-align: center;
+    padding: 10px 0px;
+}
+  
+  .footerTextos {
+    justify-content: center;
+    color: white;
+    text-align: center;
+    text-decoration: underline; }
+
+.footerIconos{
+    color: white;
+    margin: 5px 5px;
+    font-size: 1.5rem;
+}
