--- a/src/estilos.css
+++ b/src/estilos.css
@@ -74,9 +74,11 @@ header nav .menu .links a {
     color: white;
     font-size: 14px;
     padding: 10px 25px;
+    margin-top: 10px;
     margin-bottom: 10px;
     cursor: pointer;
 }
+
 
 p{
     color: #b1575a;
@@ -97,6 +99,23 @@ p{
     background-color: #271918;
     text-align: center;
     padding: 10px 0px;
+}
+
+.botonCantidad{
+    background-color: #b1575a;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    color: white;
+    font-size: 20px;
+    padding: 3px 5px;
+    cursor: pointer;
+}
+
+span{
+    padding: 10px;
+    color: #b1575a;
+    font-weight: bold;
 }
   
   .footerTextos {
