--- a/src/estilos.css
+++ b/src/estilos.css
@@ -117,6 +117,24 @@ span{
     color: #b1575a;
     font-weight: bold;
 }
+
+.loader {
+    border: 10px solid #f3f3f3;
+    border-top: 10px solid #b1575a;;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    width: 80px;
+    height: 80px;
+    animation: spin 1s linear infinite;
+  }
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } 
   
   .footerTextos {
     justify-content: center;
