--- a/src/estilos.css
+++ b/src/estilos.css
@@ -55,6 +55,11 @@
         background-color: #f3eadb;
     }
     
+    span {
+        padding: 25px 10px;
+        color: #b1575a;
+    }
+    
     .itemList__contenedor {
         display: flex;
         flex-flow: row wrap;
@@ -180,9 +185,81 @@
         color: white;
         font-size: 14px;
         padding: 12px 20px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin: 10px 10px;
         cursor: pointer;
+    }
+    
+    .cart__contenedor {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
+    
+    .cart__titulos {
+        color: #b1575a;
+        font-size: 25px;
+        font-weight: bold;
+        padding: 10px;
+    }
+    
+    .cart__textos {
+        font-weight: bold;
+        margin-bottom: 25px;
+        color: #b1575a;
+    }
+    
+    .emplycart__contenedor {
+        justify-content: center;
+        align-items: center;
+        width: 600px;
+        height: 150px;
+    }
+    
+    .cart__contenedorProductos {
+        justify-content: center;
+        align-items: center;
+        width: 600px;
+        height: auto;
+    }
+    
+    table {
+        border-collapse: collapse;
+        box-shadow: 0px 6px 5px 3px rgba(0, 0, 0, 0.425);
+        background-color: #f3eadb;
+        text-align: left;
+        overflow: hidden;
+    }
+    
+    thead {
+        box-shadow: 0 5px 10px #9fa4af;
+    }
+    
+    th {
+        padding: 1rem 2rem;
+        letter-spacing: 0.1rem;
+        color: #b1575a;
+        font-weight: bold;
+    }
+    
+    td {
+        padding: 1rem 2rem;
+        text-align: center;
+        color: #b1575a;
+    }
+    
+    .cart__total {
+        margin-top: 25px;
+        color: #b1575a;
+        font-size: 18px;
+    }
+    
+    .cart__footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
     }
     
     .footer {
@@ -203,12 +280,6 @@
         color: white;
         margin: 5px 5px;
         font-size: 1.5rem;
-    }
-    
-    span {
-        padding: 10px;
-        color: #b1575a;
-        font-weight: bold;
     }
     
     .loader {
