--- a/src/estilos.css
+++ b/src/estilos.css
@@ -338,13 +338,15 @@
     
     .orden__contenedor {
         width: 600px;
-        height: 300px;
+        height: 100%;
         margin: 25px auto;
     }
     
     .orden__textos {
         color: #b1575a;
+        font-size: 16px;
         margin-top: 25px;
+        line-height: 35px;
     }
     
     .loader {
@@ -366,4 +368,8 @@
         100% {
             transform: rotate(360deg);
         }
+    }
+    
+    .Toastify__toast {
+        --toastify-text-color-success: #b1575a;
     }
